dnl Process this file with autoconf to produce a configure script.

AC_INIT(autogen.sh)

dnl use local config dir for extras
AC_CONFIG_AUX_DIR(config)

dnl Defines the Language
AC_LANG_C

dnl Auto make
AM_INIT_AUTOMAKE(ibuser,1.0)

dnl Provides control over re-making of all auto files
dnl We also use it to define swig dependencies so end
dnl users do not see them.
AM_MAINTAINER_MODE


dnl Required for cases make defines a MAKE=make ??? Why
AC_PROG_MAKE_SET

MLX_PROG_SWIG(1.1.5, eq)

dnl Get the TCL defs: TCL_LIBS TCL_CPPFLAGS
MLX_LANG_TCL

dnl Define an input config option to control debug compile
AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])

dnl Define an input config option to allow the simulator know where 
dnl the OSM is installed. This should point to one directory above 
dnl the include directory holding opensm/osm_build_id.h
OPENIB_APP_OSM

dnl Configure the following subdirs
AC_CONFIG_SUBDIRS(ibis ibdm)
dnl we need to pass down the local dir as the directory to take ibdm from
ac_configure_args=["$ac_configure_args --with-ibdm=$srcdir/ibdm"]
AC_CONFIG_SUBDIRS(ibmgtsim)

dnl Create the following Makefiles
AC_OUTPUT(Makefile)



