dnl Process this file with autoconf to produce a configure script.

AC_INIT([ibdiag], [1.2], [openib-general@openib.org])
dnl use local config dir for extras
AC_CONFIG_AUX_DIR([config])

dnl Auto make
AM_INIT_AUTOMAKE( [foreign ] )

dnl Required for cases make defines a MAKE=make ??? Why
AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl For making dist we need not check any lib dependency
AC_ARG_ENABLE(libcheck,
[  --enable-libcheck    Enable Dependency Checking],
[case "${enableval}" in
  yes) libcheck=true ;;
  no)  libcheck=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-libcheck) ;;
esac],[libcheck=true])

if test $libcheck = true; then
dnl Checks for libraries.
CHECK_IBIS_EXEC_DIR
CHECK_IBDM_TCLLIB
SET_TK_LIBS
SET_GRAPHVIZ_LIBS
fi

dnl Create the following Makefiles
AC_OUTPUT(Makefile src/Makefile doc/Makefile)

